--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 🔹 Set up Docker Buildx (for building and pushing images)
+      # 🔐 Login to Docker Hub 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # 🔹 Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -36,7 +43,7 @@ jobs:
           push: true
           tags: ayushpoojari/chatapp-frontend:latest
 
-      # 🔹 Deploy using docker-compose (optional, only if self-hosted runner)
+      # 🔹 Deploy using docker-compose
       - name: Deploy with docker-compose
         if: github.ref == 'refs/heads/main'
         run: |
